--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import '@/styles/tailwind.css'
+import '@/styles/tailwind.css';
 
-import { Button } from "@/components/ui/button"
+import { Button } from '@/components/ui/button';
 ---
 
 <html lang="en">
@@ -9,7 +9,7 @@ import { Button } from "@/components/ui/button"
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} >
+    <meta name="generator" content={Astro.generator} />
     <title>Astro</title>
   </head>
   <body>
