--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -13,7 +13,7 @@
   --sl-color-black: #18171b;
 }
 /* Light mode colors. */
-:root[data-theme="light"] {
+:root[data-theme='light'] {
   --sl-color-accent-low: #d8d6d6;
   --sl-color-accent: #71696b;
   --sl-color-accent-high: #353132;
