--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,9 @@
 ---
-import '@/styles/tailwind.css';
-
 import { Button } from '@/components/ui/button';
+import MainLayout from '@/layouts/main-layout.astro';
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
-  </head>
-  <body>
-    <h1>Astro</h1>
-    <Button variant="outline">Hello World</Button>
-  </body>
-</html>
+<MainLayout class="font-serif">
+  <h1>Astro</h1>
+  <Button variant="outline">Hello World</Button>
+</MainLayout>
