--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,8 @@
 ---
-import BaseHeader from '@/components/base-header.astro';
+import HomeSection from '@/components/home-section.astro';
 import MainLayout from '@/layouts/main-layout.astro';
 ---
 
 <MainLayout class="font-serif">
-  <div class="flex min-h-screen w-full flex-col">
-    <BaseHeader />
-  </div>
+  <HomeSection />
 </MainLayout>
