design: update header and navigation UI

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
+import AboutSection from '@/components/about-section.astro';
 import HomeSection from '@/components/home-section.astro';
 import MainLayout from '@/layouts/main-layout.astro';
 ---
 
 <MainLayout class="font-serif">
   <HomeSection />
+  <AboutSection />
 </MainLayout>
