--- a/src/components/base-header.astro
+++ b/src/components/base-header.astro
@@ -4,15 +4,156 @@ import MenuSheet from './menu-sheet';
 
 <header
   x-data="{ atTop: true }"
-  class="header sticky top-0 z-fixed bg-first transition-box-shadow duration-400"
+  class="header"
   :class="{ 'shadow-header ': !atTop, '': atTop }"
   id="header"
   @scroll.window="atTop = (window.pageYOffset >= 50 ? false : true)"
 >
-  <nav
-    class="nav container relative flex h-header items-center justify-between"
-  >
-    <a href="#" class="nav__logo font-pixel drop-shadow-text">PYEONNE</a>
+  <nav class="nav container">
+    <a href="#" class="nav__logo">
+      <span class="nav__logo-circle">H</span>
+      <span class="nav__logo-name">Hana Jeong.</span>
+    </a>
     <MenuSheet client:load />
   </nav>
 </header>
+
+<style is:global>
+  /*=============== HEADER & NAV ===============*/
+  .header {
+    position: fixed;
+    z-index: var(--z-fixed);
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: var(--body-color);
+    transition: box-shadow 0.4s;
+  }
+
+  .nav {
+    position: relative;
+    display: flex;
+    height: var(--header-height);
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .nav__logo {
+    display: flex;
+    align-items: center;
+    color: var(--title-color);
+    column-gap: 0.5rem;
+  }
+
+  .nav__logo-circle,
+  .nav__toggle {
+    display: grid;
+    width: 32px;
+    height: 32px;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    place-items: center;
+  }
+
+  .nav__logo-circle {
+    border-radius: 50%;
+  }
+
+  .nav__toggle {
+    cursor: pointer;
+  }
+
+  /* Navigation for mobile devices */
+  @media screen and (max-width: 1150px) {
+    .nav__menu {
+      backdrop-filter: blur(8px);
+      background-color: hsla(0, 0%, 0%, 0.75);
+      padding-block: 1.8rem 5rem;
+      text-align: center;
+    }
+  }
+
+  .nav__title,
+  .nav__name,
+  .nav__close {
+    color: var(--white-color);
+  }
+
+  .nav__title {
+    display: block;
+    margin-bottom: 3.5rem;
+    font-size: var(--smaller-font-size);
+    font-weight: var(--font-semi-bold);
+    font-weight: var(--font-semi-bold);
+  }
+
+  .nav__name {
+    position: relative;
+    width: max-content;
+    margin: 0 auto 3rem;
+    font-size: var(--h2-font-size);
+  }
+
+  .nav__name::after,
+  .nav__name::before {
+    position: absolute;
+    top: 50%;
+    left: -4rem;
+    width: 40px;
+    height: 1px;
+    background-color: var(--text-color-light);
+    content: '';
+  }
+
+  .nav__name::before {
+    right: -4rem;
+    left: initial;
+  }
+
+  .nav__list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+  }
+
+  .nav__link {
+    position: relative;
+    color: var(--text-color);
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-semi-bold);
+    transition: color 0.3s;
+  }
+
+  .nav__link::after {
+    position: absolute;
+    bottom: -0.5rem;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: var(--white-color);
+    content: '';
+    transition: width 0.3s;
+  }
+
+  .nav__link:hover {
+    color: var(--white-color);
+  }
+
+  .nav__link:hover::after {
+    width: 25%;
+  }
+
+  .nav__close {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+    color: var(--text-color);
+    cursor: pointer;
+    font-size: 1.5rem;
+    transition: color 0.3s;
+  }
+
+  .nav__close:hover {
+    color: var(--white-color);
+  }
+</style>
