--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -1,7 +1,6 @@
 ---
 import BaseHead from '@/components/base-head.astro';
 import BaseHeader from '@/components/base-header.astro';
-import { cn } from '@/libs/utils';
 ---
 
 <html lang={Astro.props.lang}>
@@ -10,7 +9,7 @@ import { cn } from '@/libs/utils';
   </head>
   <body>
     <BaseHeader />
-    <main class={cn('main flex-1', Astro.props.class)}>
+    <main class="main">
       <slot />
     </main>
   </body>
