--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,11 +43,11 @@
 /*=============== VARIABLES CSS ===============*/
 @layer base {
   :root {
-    --header-height: 4rem;
+    --header-height: 3.5rem;
 
     /*========== Colors ==========*/
     /*Color mode HSL(hue, saturation, lightness)*/
-    --first-color: hsl(170, 90%, 34%);
+    /* --first-color: hsl(170, 90%, 34%);
     --first-color-dark: hsl(170, 100%, 28%);
     --first-color-darken: hsl(170, 100%, 23%);
     --second-color: hsl(45, 100%, 52%);
@@ -57,7 +57,16 @@
     --shadow-circle: 0 12px 24px hsla(0, 0%, 0%, 0.4);
     --shadow-button: 0 -4px 8px hsla(0, 0%, 0%, 0.3);
     --shadow-card: 0 -8px 24px hsla(0, 0%, 0%, 0.3);
-    --shadow-text: 0 2px 4px var(--first-color-darken);
+    --shadow-text: 0 2px 4px var(--first-color-darken); */
+    --first-color: hsl(14, 98%, 50%);
+    --black-color: hsl(0, 0%, 0%);
+    --black-color-light: hsl(0, 0%, 40%);
+    --white-color: hsl(0, 0%, 95%);
+    --title-color: hsl(0, 0%, 0%);
+    --text-color: hsl(0, 0%, 35%);
+    --text-color-light: hsl(0, 0%, 64%);
+    --body-color: hsl(0, 0%, 87%);
+    --container-color: hsl(0, 0%, 83%);
 
     /*========== Font and typography ==========*/
     /*.5rem = 8px | 1rem = 16px ...*/
@@ -65,12 +74,19 @@
     --font-serif: 'HeirofLight', sans-serif;
     --font-mono: 'Source Code Pro', monospace;
     --font-pixel: 'DNFBitBitv2', monospace;
-    --biggest-font-size: 3rem;
-    --h1-font-size: 1.5rem;
+    --biggest-font-size: 2.5rem;
+    --h1-font-size: 1.75rem;
     --h2-font-size: 1.25rem;
-    --h3-font-size: 1rem;
+    --h3-font-size: 1.125rem;
     --normal-font-size: 0.938rem;
     --small-font-size: 0.813rem;
+    --smaller-font-size: 0.75rem;
+
+    /*========== Font weight ==========*/
+    --font-regular: 400;
+    --font-medium: 500;
+    --font-semi-bold: 600;
+    --font-bold: 700;
 
     /*========== z index ==========*/
     --z-tooltip: 10;
@@ -80,12 +96,13 @@
   /*========== Responsive typography ==========*/
   @media screen and (min-width: 1150px) {
     :root {
-      --biggest-font-size: 5.5rem;
-      --h1-font-size: 2.5rem;
+      --biggest-font-size: 4.5rem;
+      --h1-font-size: 3rem;
       --h2-font-size: 1.5rem;
       --h3-font-size: 1.25rem;
       --normal-font-size: 1rem;
       --small-font-size: 0.875rem;
+      --smaller-font-size: 0.813rem;
     }
   }
 }
@@ -102,11 +119,19 @@
     scroll-behavior: smooth;
   }
 
-  /* react-remove-scroll 에서 강제로 body를 조작한다. */
   body {
-    @apply m-0 flex min-h-screen flex-col p-0;
-    @apply font-sans text-normal antialiased;
-    @apply bg-first text-white;
+    background-color: var(--body-color);
+    color: var(--text-color);
+    font-family: var(--font-serif);
+    font-size: var(--normal-font-size);
+  }
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    color: var(--title-color);
+    font-weight: var(--font-bold);
   }
 
   ul {
@@ -135,37 +160,59 @@
   }
 
   .section {
-    padding-block: 5rem 1rem;
+    padding-block: 4rem 2rem;
   }
 
-  .section__title {
-    margin-bottom: 1.5rem;
-    font: var(--font-regular) var(--h1-font-size) var(--second-font);
-    text-align: center;
-    text-shadow: var(--shadow-text);
+  .section__title-1,
+  .section__title-2 {
+    position: relative;
+    width: max-content;
+    margin: 0.75rem auto 2rem;
+    font-size: var(--h1-font-size);
+  }
+
+  .section__title-1 span,
+  .section__title-2 span {
+    position: relative;
+    z-index: 5;
+  }
+
+  .section__title-1::after,
+  .section__title-2::after {
+    position: absolute;
+    top: -4px;
+    right: -8px;
+    width: 40px;
+    height: 28px;
+    background-color: hsla(14, 98%, 50%, 0.2);
+    content: '';
+  }
+
+  .section__title-2::after {
+    top: initial;
+    bottom: -4px;
+  }
+
+  .geometric-box {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: var(--first-color);
+    rotate: -30deg;
+  }
+
+  .geometric-box::after {
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    width: 16px;
+    height: 16px;
+    border: 3px solid var(--black-color);
+    content: '';
   }
 
   .main {
-    overflow: hidden;
-  }
-}
-
-/*=============== HEADER & NAV ===============*/
-@layer components {
-  .nav__link svg {
-    transition:
-      opacity 0.4s,
-      visibility 0.5s;
-  }
-
-  /* Sibling fade animation */
-  .nav__list:has(.nav__link:hover) .nav__link:not(:hover) {
-    @apply opacity-40;
-  }
-
-  /* Shadow header */
-  .shadow-header {
-    box-shadow: 0 2px 16px hsla(0, 0%, 0%, 0.15);
+    overflow: hidden; /* For animation ScrollReveal */
   }
 }
 
