design: update home section UI

--- a/src/components/base-header.astro
+++ b/src/components/base-header.astro
@@ -156,4 +156,9 @@ import MenuSheet from './menu-sheet';
   .nav__close:hover {
     color: var(--white-color);
   }
+
+  /* Add shadow header */
+  .shadow-header {
+    box-shadow: 0 1px 16px hsla(0, 0%, 0%, 0.12);
+  }
 </style>
