--- a/src/components/home-section.astro
+++ b/src/components/home-section.astro
@@ -1,113 +1,199 @@
 ---
-import { AtSign, Github, Linkedin } from 'lucide-react';
+import { ChevronDown, Github, Linkedin } from 'lucide-react';
 
-import { NotionIcon, TwitterXIcon } from '@/components/ui/icons';
+import { TwitterXIcon } from '@/components/ui/icons';
 ---
 
 <section class="home section" id="home">
-  <div class="home__container container grid justify-center gap-y-16 pt-6">
-    <div class="home__data text-center">
-      <h1
-        class="home__title mb-4 flex flex-col font-pixel text-biggest font-normal drop-shadow-text"
-      >
-        <span>I'M HANA,</span>
-        <span
-          x-data="{ texts: ['Frontend', 'React', 'TypeScript', 'Flutter'] }"
-          x-typewriter.cursor="texts"></span>
+  <div class="home__container container grid">
+    <h1 class="home__name">Hana Jeong</h1>
+    <div class="home__perfil">
+      <div class="home__image">
+        <img src="/images/home-perfil.jpg" alt="image" class="home__img" />
+        <div class="home__shadow"></div>
+        <img src="/images/curved-arrow.svg" alt="image" class="home__arrow" />
+        <img src="/images/random-lines.svg" alt="image" class="home__line" />
+        <div class="geometric-box"></div>
+      </div>
 
-        <span class="relative w-max self-center"
-          >DEVELOPER <img
-            src="/images/meat.png"
-            alt="image"
-            class="home__meat absolute -right-12 bottom-2 w-10 opacity-50"
-          /></span
-        >
-      </h1>
-      <p class="home__description mb-4">
-        사용자와 <b>부드러운</b> 상호작용하는 것, 복잡한 것을 <b
-          >단순하고 간편하게</b
-        > 만드는 것에 열광합니다.
-      </p>
-
-      <div class="nav__social mb-10 flex items-center justify-center gap-x-2.5">
+      <div class="home__social">
         <a
-          class="nav__social-link p-1 text-white transition-all duration-400 ease-in-out hover:-translate-y-1 hover:text-second"
-          href="mailto:pyeonne@gmail.com"
-          aria-label="email"><AtSign className="h-5 w-5" /></a
-        >
-        <a
-          class="nav__social-link p-1 text-white transition-all duration-400 ease-in-out hover:-translate-y-1 hover:text-second"
           href="https://github.com/pyeonne"
           target="_blank"
-          aria-label="github"><Github className="h-5 w-5" /></a
+          class="home__social-link"><Github className="h-5 w-5" /></a
         >
         <a
-          class="nav__social-link p-1 text-white transition-all duration-400 ease-in-out hover:-translate-y-1 hover:text-second"
           href="https://twitter.com/pyeonne"
           target="_blank"
-          aria-label="twitter"><TwitterXIcon className="h-5 w-5" /></a
-        >
-        <a
-          class="nav__social-link p-1 text-white transition-all duration-400 ease-in-out hover:-translate-y-1 hover:text-second"
+          class="home__social-link"><TwitterXIcon className="h-5 w-5" /></a
+        ><a
           href="https://www.linkedin.com/in/pyeonne/"
           target="_blank"
-          aria-label="linkedin"><Linkedin className="h-5 w-5" /></a
+          class="home__social-link"><Linkedin className="h-5 w-5" /></a
         >
-      </div>
-
-      <div class="home__buttons flex items-center justify-center gap-x-4">
-        <a
-          href="#"
-          class="button flex items-center rounded-[4rem] bg-second px-8 py-3 font-semibold text-second-dark transition-opacity duration-300 hover:opacity-80"
-          ><NotionIcon className="mr-2 h-5 w-5" /> Resume</a
-        >
-        <!-- <a
-          href="#"
-          class="button__ghost rounded-[4rem] bg-transparent px-8 py-3 font-semibold text-second"
-          >Contact Me</a
-        > -->
       </div>
     </div>
-    <div
-      class="home__images relative grid place-items-center justify-self-center"
-    >
-      <div
-        class="home__circle grid h-80 w-80 place-items-center rounded-[50%] bg-first-darken"
-      >
-        <div
-          class="home__subcircle h-[250px] w-[250px] rounded-[50%] bg-second"
-        >
-        </div>
+
+    <div class="home__info">
+      <p class="home__description">
+        <b>Frontend Developer</b>, with knowledge in web development and design,
+        I offer the best projects resulting in quality work.
+      </p>
+    </div>
+
+    <a href="#about" class="home__scroll">
+      <div class="home__scroll-box">
+        <ChevronDown className="h-4 w-4" />
       </div>
 
-      <img src="/images/home-chips.png" alt="imgae" class="home__img" />
-
-      <img
-        src="/images/chips-1.png"
-        alt="imgae"
-        class="home__chips-1 -right-2"
-      />
-      <img
-        src="/images/chips-2.png"
-        alt="imgae"
-        class="home__chips-2 -bottom-3 -right-2"
-      />
-      <img
-        src="/images/chips-3.png"
-        alt="imgae"
-        class="home__chips-3 -left-2 top-1"
-      />
-      <img
-        src="/images/tomato-1.png"
-        alt="imgae"
-        class="home__tomato-1 -top-6 right-10"
-      />
-      <img
-        src="/images/tomato-2.png"
-        alt="imgae"
-        class="home__tomato-2 -bottom-6 left-14"
-      />
-      <img src="/images/leaf-3.png" alt="imgae" class="home__leaf -left-3" />
-    </div>
+      <span class="home__scroll-text">Scroll Down</span>
+    </a>
   </div>
 </section>
+
+<style is:global>
+  /*=============== HOME ===============*/
+  .home__container {
+    padding-top: 2rem;
+  }
+
+  .home__name {
+    font-size: var(--biggest-font-size);
+    text-align: center;
+  }
+
+  .home__perfil {
+    position: relative;
+    justify-self: center;
+  }
+
+  .home__image {
+    width: 220px;
+  }
+
+  .home__img {
+    position: relative;
+    z-index: 10;
+  }
+
+  .home__shadow {
+    width: 100%;
+    height: 100%;
+    background-color: var(--container-color);
+    position: absolute;
+    bottom: -0.75rem;
+    right: -0.75rem;
+    border: 4px solid var(--black-color);
+    z-index: 5;
+    transition: background-color 0.4s;
+  }
+
+  .home__arrow,
+  .home__line {
+    position: absolute;
+    filter: invert(1);
+    width: 50px;
+    transition: filter 0.4s;
+  }
+
+  .home__arrow {
+    left: 40%;
+    bottom: -4rem;
+  }
+
+  .home__line {
+    right: -2rem;
+    bottom: -0.5rem;
+  }
+
+  .home__perfil .geometric-box {
+    top: 2.5rem;
+    left: -0.7rem;
+    z-index: 10;
+  }
+
+  .home__social {
+    height: max-content;
+    position: absolute;
+    left: -3rem;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    display: grid;
+    row-gap: 1rem;
+  }
+
+  .home__social-link {
+    background-color: var(--black-color-light);
+    color: var(--white-color);
+    font-size: 1.25rem;
+    padding: 6px;
+    display: grid;
+    place-items: center;
+    transition: background-color 0.3s;
+  }
+
+  .home__social-link:hover {
+    background-color: var(--black-color);
+  }
+
+  .home__info {
+    margin-top: 4rem;
+  }
+  .home__description {
+    text-align: center;
+    color: var(--title-color);
+    margin-top: 1.5rem;
+  }
+
+  .home__description b {
+    background: linear-gradient(
+      90deg,
+      hsla(209, 78%, 35%, 0.3),
+      hsla(14, 98%, 50%, 0)
+    );
+  }
+
+  .home__scroll {
+    display: block;
+    width: max-content;
+    margin: 0 auto;
+  }
+
+  .home__scroll-text {
+    display: none;
+  }
+
+  .home__scroll-box {
+    background-color: var(--black-color);
+    color: var(--white-color);
+    width: 36px;
+    height: 36px;
+    display: grid;
+    place-items: center;
+    font-size: 1rem;
+    cursor: pointer;
+    overflow: hidden;
+    transition: background-color 0.4s;
+  }
+
+  .home__scroll-box svg {
+    animation: scroll-down 3s infinite;
+  }
+
+  /* Animate scroll icon */
+  @keyframes scroll-down {
+    0% {
+      transform: translateY(-1rem);
+      opacity: 0;
+    }
+    50% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    100% {
+      transform: translateY(0.6rem);
+      opacity: 0;
+    }
+  }
+</style>
