--- a/src/components/about-section.astro
+++ b/src/components/about-section.astro
@@ -1,13 +1,148 @@
 ---
+import { Send } from 'lucide-react';
 
+import { NotionIcon } from './ui/icons';
 ---
 
 <section class="about section" id="about">
   <div class="about__container container grid">
-    <div class="about__data">
-      <h2 class="section__title">
-        DISCOVER YOUR <br /> FAVORITE FLAVORS
-      </h2>
+    <h2 class="section__title-1">About Me.</h2>
+
+    <div class="about__perfil">
+      <div class="about__image">
+        <img src="/images/about-perfil.jpg" alt="image" class="about__img" />
+        <div class="about__shadow"></div>
+        <div class="geometric-box"></div>
+        <img src="/images/random-lines.svg" alt="image" class="about__line" />
+        <div class="about__box"></div>
+      </div>
+    </div>
+
+    <div class="about__info">
+      <p class="about__description">
+        Passionate about creating <b>Web Pages</b> with
+        <b>UI/UX User Interface</b>, I have years of experience and many clients
+        are happy with the projects carried out.
+      </p>
+
+      <ul class="about__list">
+        <li class="about__item">
+          <b>My Skills Are:</b> Typescript, React, Next.js, Astro, TanStack Query,
+          Zustand, Tailwind, Flutter & Figma.
+        </li>
+      </ul>
+
+      <div class="about__buttons">
+        <a href="#contact" class="button"
+          ><Send className="h-5 w-5" /> Contact Me</a
+        >
+
+        <a
+          href="https://www.linkedin.com/in/pyeonne/"
+          target="_blank"
+          class="button__ghost"
+        >
+          <NotionIcon className="h-5 w-5" />
+        </a>
+      </div>
     </div>
   </div>
 </section>
+
+<style is:global>
+  /*=============== ABOUT ===============*/
+  .about {
+    background-color: var(--container-color);
+    transition: background-color 0.4s;
+  }
+
+  .grid.about__container {
+    row-gap: 0;
+  }
+
+  .about__perfil {
+    position: relative;
+    justify-self: center;
+    margin-block: 2.5rem 4.5rem;
+  }
+
+  .about__image {
+    width: 220px;
+  }
+
+  .about__img {
+    position: relative;
+    border: 4px solid var(--white-color);
+    z-index: 1;
+  }
+
+  .about__shadow,
+  .about__line,
+  .about__box {
+    position: absolute;
+  }
+
+  .about__shadow {
+    width: 150px;
+    height: 385px;
+    background-color: var(--body-color);
+    top: -2.5rem;
+    right: -3.5rem;
+    border-bottom: 4px solid var(--first-color);
+    transition: background-color 0.4s;
+  }
+
+  .about__perfil .geometric-box {
+    top: 1.5rem;
+    right: -2.8rem;
+  }
+
+  .about__line {
+    filter: invert(1);
+    right: -1.25rem;
+    top: 6rem;
+    width: 50px;
+    transition: filter 0.4s;
+  }
+
+  .about__box {
+    width: 40px;
+    height: 40px;
+    background-color: var(--first-color);
+    right: -0.5rem;
+    bottom: 1.5rem;
+  }
+
+  .about__info {
+    pading-left: 1.25rem;
+  }
+
+  .about__description {
+    position: relative;
+    color: var(--title-color);
+    margin-bottom: 1.5rem;
+  }
+
+  .about__description::after {
+    content: '';
+    width: 20px;
+    height: 1px;
+    background-color: var(--title-color);
+    position: absolute;
+    left: -1.65rem;
+    top: 0.7rem;
+  }
+
+  .about__list {
+    list-style: square;
+    color: var(--title-color);
+    margin-bottom: 3rem;
+  }
+
+  .about__buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1rem;
+  }
+</style>
