feat: add services section UI

--- a/src/components/about-section.astro
+++ b/src/components/about-section.astro
@@ -6,7 +6,7 @@ import { NotionIcon } from './ui/icons';
 
 <section class="about section" id="about">
   <div class="about__container container grid">
-    <h2 class="section__title-1">About Me.</h2>
+    <h2 class="section__title-1"><span>About Me.</span></h2>
 
     <div class="about__perfil">
       <div class="about__image">
