--- a/src/components/home-section.astro
+++ b/src/components/home-section.astro
@@ -119,7 +119,8 @@ import { TwitterXIcon } from '@/components/ui/icons';
     top: 0;
     bottom: 0;
     margin: auto 0;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     row-gap: 1rem;
   }
 
