--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
 import BaseHead from '@/components/base-head.astro';
-import BaseHeader from '@/components/base-header.astro';
+import Navigation from '@/components/Navigation/Navigation.astro';
 ---
 
 <html lang={Astro.props.lang}>
@@ -8,7 +8,7 @@ import BaseHeader from '@/components/base-header.astro';
     <BaseHead />
   </head>
   <body>
-    <BaseHeader />
+    <Navigation />
     <main class="main">
       <slot />
     </main>
