feat: add projects section UI

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,14 @@
 ---
 import AboutSection from '@/components/about-section.astro';
 import HomeSection from '@/components/home-section.astro';
+import ProjectsSection from '@/components/projects/projects-section.astro';
 import ServicesSection from '@/components/services-section.astro';
-import BaseLayout from '@/layouts/BaseLayout.astro';
+import BaseLayout from '@/layouts/base-layout.astro';
 ---
 
 <BaseLayout class="font-serif">
   <HomeSection />
   <AboutSection />
   <ServicesSection />
+  <ProjectsSection />
 </BaseLayout>
