--- a/src/components/about/about.astro
+++ b/src/components/about/about.astro
@@ -1,7 +1,7 @@
 ---
 import { Send } from 'lucide-react';
 
-import { NotionIcon } from './ui/icons';
+import { NotionIcon } from '../ui/icons';
 ---
 
 <section class="about section" id="about">
