--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,16 @@
 ---
-import AboutSection from '@/components/about-section.astro';
+import About from '@/components/about/about.astro';
+import Contact from '@/components/contact/contact.astro';
 import HomeSection from '@/components/home-section.astro';
-import ProjectsSection from '@/components/projects/projects-section.astro';
-import ServicesSection from '@/components/services-section.astro';
+import Projects from '@/components/projects/projects.astro';
+import Services from '@/components/services/services.astro';
 import BaseLayout from '@/layouts/base-layout.astro';
 ---
 
 <BaseLayout class="font-serif">
   <HomeSection />
-  <AboutSection />
-  <ServicesSection />
-  <ProjectsSection />
+  <About />
+  <Services />
+  <Projects />
+  <Contact />
 </BaseLayout>
