--- a/src/components/contact/contact.astro
+++ b/src/components/contact/contact.astro
@@ -1,7 +1,9 @@
 ---
-import { Github, Linkedin, Send } from 'lucide-react';
+import { Github, Linkedin } from 'lucide-react';
 
 import { TwitterXIcon } from '@/components/ui/icons';
+
+import ContactForm from './contact-form';
 ---
 
 <section class="contact section" id="contact">
@@ -21,62 +23,7 @@ import { TwitterXIcon } from '@/components/ui/icons';
       <div class="geometric-box"></div>
     </div>
 
-    <div class="contact__mail">
-      <h2 class="contact__title">Send Me A Message</h2>
-
-      <form action="" class="contact__form" id="contact-form">
-        <div class="contact__group">
-          <div class="contact__box">
-            <input
-              type="text"
-              name="user_name"
-              class="contact__input"
-              id="name"
-              required
-              placeholder="First Name"
-            />
-            <label for="name" class="contact__label">First Name</label>
-          </div>
-
-          <div class="contact__box">
-            <input
-              type="email"
-              name="user_email"
-              class="contact__input"
-              id="email"
-              required
-              placeholder="Email Address"
-            />
-            <label for="email" class="contact__label">Email Address</label>
-          </div>
-        </div>
-        <div class="contact__box">
-          <input
-            type="text"
-            name="user_subject"
-            class="contact__input"
-            id="subject"
-            required
-            placeholder="Subject"
-          />
-          <label for="subject" class="contact__label">Subject</label>
-        </div>
-
-        <div class="contact__box contact__area">
-          <textarea
-            name="user_message"
-            id="message"
-            class="contact__input"
-            required
-            placeholder="Message"></textarea>
-          <label for="message" class="contact__label">Message</label>
-        </div>
-
-        <button type="submit" class="contact__button button"
-          ><Send /> Sned Message</button
-        >
-      </form>
-    </div>
+    <ContactForm client:load />
 
     <div class="contact__social">
       <img
@@ -323,5 +270,12 @@ import { TwitterXIcon } from '@/components/ui/icons';
 
   .contact__social-link:hover {
     background-color: var(--first-color);
+  }
+
+  .contact__message {
+    font-size: var(--small-font-size);
+    position: absolute;
+    bottom: -1.6rem;
+    left: 0;
   }
 </style>
