feat: add footer UI

--- a/src/components/about/about.astro
+++ b/src/components/about/about.astro
@@ -114,7 +114,7 @@ import { NotionIcon } from '../ui/icons';
   }
 
   .about__info {
-    pading-left: 1.25rem;
+    padding-left: 1.25rem;
   }
 
   .about__description {
