--- a/src/components/services/services.astro
+++ b/src/components/services/services.astro
@@ -4,7 +4,7 @@ import { CodeXml, LayoutPanelLeft, Smartphone } from 'lucide-react';
 import ServicesCard from './services-card.astro';
 ---
 
-<section class="services section">
+<section class="services section" id="services">
   <h2 class="section__title-2"><span>Services.</span></h2>
 
   <div class="services__container container grid">
