--- a/src/layouts/base-layout.astro
+++ b/src/layouts/base-layout.astro
@@ -1,7 +1,7 @@
 ---
 import BaseHead from '@/components/base-head.astro';
 import Footer from '@/components/footer/footer.astro';
-import Navigation from '@/components/navigation/navigation.astro';
+import Header from '@/components/header/header.astro';
 import { Toaster } from '@/components/ui/toaster';
 ---
 
@@ -10,7 +10,7 @@ import { Toaster } from '@/components/ui/toaster';
     <BaseHead />
   </head>
   <body>
-    <Navigation />
+    <Header />
     <main class="main">
       <slot />
     </main>
