--- a/src/layouts/base-layout.astro
+++ b/src/layouts/base-layout.astro
@@ -2,6 +2,7 @@
 import BaseHead from '@/components/base-head.astro';
 import Footer from '@/components/footer/footer.astro';
 import Header from '@/components/header/header.astro';
+import ScrollUp from '@/components/scroll-up/scroll-up.astro';
 import { Toaster } from '@/components/ui/toaster';
 ---
 
@@ -15,6 +16,7 @@ import { Toaster } from '@/components/ui/toaster';
       <slot />
     </main>
     <Footer />
+    <ScrollUp />
     <Toaster client:load />
   </body>
 </html>
