--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -259,3 +259,21 @@
     border: 3px solid var(--first-color);
   }
 }
+
+/*=============== SCROLL BAR ===============*/
+@layer base {
+  ::-webkit-scrollbar {
+    width: 0.6rem;
+    border-radius: 0.5rem;
+    background-color: hsl(0, 0%, 65%);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 0.5rem;
+    background-color: hsl(0, 0%, 55%);
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(0, 0%, 45%);
+  }
+}
