feat: add active link animation

--- a/src/components/header/header.astro
+++ b/src/components/header/header.astro
@@ -161,4 +161,13 @@ import MenuSheet from './menu-sheet';
   .shadow-header {
     box-shadow: 0 1px 16px hsla(0, 0%, 0%, 0.12);
   }
+
+  /* Active link */
+  .active-link {
+    color: var(--white-color);
+  }
+
+  .active-link::after {
+    width: 25%;
+  }
 </style>
