--- a/src/components/header/header.astro
+++ b/src/components/header/header.astro
@@ -1,5 +1,6 @@
 ---
 import MenuSheet from './menu-sheet';
+import ThemeDropdown from './theme-dropdown';
 ---
 
 <header
@@ -14,7 +15,13 @@ import MenuSheet from './menu-sheet';
       <span class="nav__logo-circle">H</span>
       <span class="nav__logo-name">Hana Jeong.</span>
     </a>
-    <MenuSheet client:load />
+    <div class="nav__buttons">
+      <!-- Theme Button -->
+      <ThemeDropdown client:load />
+
+      <!-- Toggle Button -->
+      <MenuSheet client:load />
+    </div>
   </nav>
 </header>
 
@@ -27,7 +34,9 @@ import MenuSheet from './menu-sheet';
     left: 0;
     width: 100%;
     background-color: var(--body-color);
-    transition: box-shadow 0.4s;
+    transition:
+      box-shadow 0.4s,
+      background-color 0.4s;
   }
 
   .nav {
@@ -43,6 +52,12 @@ import MenuSheet from './menu-sheet';
     align-items: center;
     color: var(--title-color);
     column-gap: 0.5rem;
+  }
+
+  .nav__buttons {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
   }
 
   .nav__logo-circle,
