--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,18 +47,7 @@
 
     /*========== Colors ==========*/
     /*Color mode HSL(hue, saturation, lightness)*/
-    /* --first-color: hsl(170, 90%, 34%);
-    --first-color-dark: hsl(170, 100%, 28%);
-    --first-color-darken: hsl(170, 100%, 23%);
-    --second-color: hsl(45, 100%, 52%);
-    --second-color-dark: hsl(45, 100%, 20%);
-    --white-color: hsl(0, 0%, 100%);
-    --shadow-img: drop-shadow(0 12px 24px hsla(0, 0%, 0%, 0.4));
-    --shadow-circle: 0 12px 24px hsla(0, 0%, 0%, 0.4);
-    --shadow-button: 0 -4px 8px hsla(0, 0%, 0%, 0.3);
-    --shadow-card: 0 -8px 24px hsla(0, 0%, 0%, 0.3);
-    --shadow-text: 0 2px 4px var(--first-color-darken); */
-    --first-color: hsla(209, 78%, 35%, 0.75);
+    --first-color: hsl(207, 44%, 67%);
     --black-color: hsl(0, 0%, 0%);
     --black-color-light: hsl(0, 0%, 40%);
     --white-color: hsl(0, 0%, 95%);
@@ -67,6 +56,29 @@
     --text-color-light: hsl(0, 0%, 64%);
     --body-color: hsl(0, 0%, 87%);
     --container-color: hsl(0, 0%, 83%);
+
+    --gray-50: #ffffff;
+    --gray-75: #fdfdfd;
+    --gray-100: #f8f8f8;
+    --gray-200: #e6e6e6;
+    --gray-300: #d5d5d5;
+    --gray-400: #b1b1b1;
+    --gray-500: #909090;
+    --gray-600: #6d6d6d;
+    --gray-700: #464646;
+    --gray-800: #222222;
+    --gray-900: #000000;
+    --gray-950: #000000;
+
+    --selection: hsla(0, 0%, 0%, 0.045);
+    --border: hsla(0, 0%, 0%, 0.09);
+
+    --page-background: var(--gray-50);
+
+    --heading: var(--gray-900);
+    --text-body: var(--gray-800);
+    --text-second: var(--gray-700);
+    --text-disabled: var(--gray-500);
 
     /*========== Font and typography ==========*/
     /*.5rem = 8px | 1rem = 16px ...*/
@@ -117,13 +129,17 @@
 
   html {
     scroll-behavior: smooth;
+    scroll-padding-top: var(--header-height);
+    -webkit-tap-highlight-color: transparent;
   }
 
   body {
+    @apply antialiased;
     background-color: var(--body-color);
     color: var(--text-color);
     font-family: var(--font-serif);
     font-size: var(--normal-font-size);
+    transition: background-color 0.4s; /* For dark mode */
   }
 
   h1,
@@ -147,8 +163,111 @@
     max-width: 100%;
     height: auto;
   }
+}
 
-  /*=============== REUSABLE CSS CLASSES ===============*/
+/*=============== THEME ===============*/
+@layer components {
+  .change-theme {
+    color: var(--title-color);
+    cursor: pointer;
+    font-size: 1.25rem;
+    transition: color 0.3s;
+  }
+}
+
+/*========== Variables Dark theme ==========*/
+@layer base {
+  .dark {
+    --first-color: hsl(210, 32%, 43%);
+    --black-color: hsl(0, 0%, 18%);
+    --black-color-light: hsl(0, 0%, 30%);
+    --title-color: hsl(0, 0%, 95%);
+    --text-color: hsl(0, 0%, 70%);
+    --body-color: hsl(0, 0%, 8%);
+    --container-color: hsl(0, 0%, 12%);
+
+    --gray-50: #000;
+    --gray-75: #141414;
+    --gray-100: #1d1d1d;
+    --gray-200: #303030;
+    --gray-300: #4b4b4b;
+    --gray-400: #6a6a6a;
+    --gray-500: #8d8d8d;
+    --gray-600: #b0b0b0;
+    --gray-700: #d0d0d0;
+    --gray-800: #ebebeb;
+    --gray-900: #fff;
+    --gray-950: #fff;
+
+    --selection: hsla(0, 0%, 100%, 0.077);
+    --border: hsla(0, 0%, 100%, 0.1);
+
+    --page-background: var(--gray-75);
+
+    --heading: var(--gray-900);
+    --text-body: var(--gray-800);
+    --text-second: var(--gray-600);
+    --text-disabled: var(--gray-500);
+  }
+}
+
+/*========== 
+	Color changes in some parts of 
+	the website, in dark theme
+==========*/
+@layer base {
+  .dark .shadow-header {
+    box-shadow: 0 1px 12px hsla(0, 0%, 0%, 0.6);
+  }
+
+  .dark .section__title-1::after,
+  .dark .section__title-2::after {
+    background-color: hsla(210, 32%, 43%, 0.2);
+  }
+
+  .dark :is(.home__arrow, .home__line, .about__line) {
+    filter: none;
+  }
+
+  .dark .home__description b {
+    background: linear-gradient(
+      90deg,
+      hsla(210, 32%, 43%, 0.3),
+      hsla(210, 32%, 43%, 0)
+    );
+  }
+
+  .dark :is(.button__ghost, .services__icon svg) {
+    color: var(--white-color);
+  }
+
+  .dark .projects__card:hover {
+    background-color: var(--body-color);
+  }
+
+  .dark :is(.contact__mail, .contact__input, .contact__label) {
+    background-color: var(--container-color);
+  }
+
+  .dark .footer {
+    background-color: hsl(0, 0%, 4%);
+  }
+
+  .dark::-webkit-scrollbar {
+    background-color: hsl(0, 0%, 20%);
+  }
+
+  .dark::-webkit-scrollbar-thumb {
+    background-color: hsl(0, 0%, 30%);
+  }
+
+  .dark::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(0, 0%, 40%);
+  }
+}
+
+/*=============== REUSABLE CSS CLASSES ===============*/
+@layer base {
   .container {
     max-width: 1120px;
     margin-inline: 1.5rem;
@@ -184,7 +303,7 @@
     right: -8px;
     width: 40px;
     height: 28px;
-    background-color: hsla(209, 78%, 35%, 0.2);
+    background-color: hsla(207, 44%, 67%, 0.2);
     content: '';
   }
 
@@ -262,18 +381,44 @@
 
 /*=============== SCROLL BAR ===============*/
 @layer base {
+  * {
+    --scrollbar-size: 16px;
+    --scrollbar-size-min: 44px;
+    --scrollbar-color: var(--gray-200);
+    scrollbar-color: var(--scrollbar-color) transparent;
+    /* firefox */
+    scrollbar-width: thin;
+  }
+
   ::-webkit-scrollbar {
-    width: 0.6rem;
-    border-radius: 0.5rem;
-    background-color: hsl(0, 0%, 65%);
+    width: var(--scrollbar-size);
+    height: var(--scrollbar-size);
   }
 
   ::-webkit-scrollbar-thumb {
-    border-radius: 0.5rem;
-    background-color: hsl(0, 0%, 55%);
+    min-width: var(--scrollbar-size-min);
+    min-height: var(--scrollbar-size-min);
+    border: 5px solid transparent;
+    border-radius: var(--scrollbar-size);
+    background-clip: padding-box;
+    background-color: var(--scrollbar-color);
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background-color: hsl(0, 0%, 45%);
+    --scrollbar-color: var(--gray-300);
+  }
+
+  ::-webkit-scrollbar-thumb:active {
+    --scrollbar-color: var(--gray-300);
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-button,
+  ::-webkit-scrollbar-corner,
+  ::-webkit-resizer {
+    display: none;
   }
 }
