design: add css for breakpoints

--- a/src/components/contact/contact.astro
+++ b/src/components/contact/contact.astro
@@ -67,7 +67,7 @@ import ContactForm from './contact-form';
     padding-bottom: 0;
   }
 
-  .contact__container.grid {
+  .contact__container {
     position: relative;
     grid-template-rows: 300px max-content max-content;
     row-gap: 0;
@@ -96,7 +96,7 @@ import ContactForm from './contact-form';
     margin-bottom: 2rem;
   }
 
-  .contact__description-2 {
+  .contact__description-2 b {
     color: var(--title-color);
     font-weight: var(--font-semi-bold);
   }
