--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -134,6 +134,7 @@
   }
 
   body {
+    @apply m-0  min-h-screen p-0;
     @apply antialiased;
     background-color: var(--body-color);
     color: var(--text-color);
@@ -270,7 +271,8 @@
 @layer base {
   .container {
     max-width: 1120px;
-    margin-inline: 1.5rem;
+    margin-inline: auto;
+    padding-inline: 1.5rem;
   }
 
   .grid {
@@ -335,6 +337,168 @@
   }
 }
 
+/*=============== HEADER & NAV ===============*/
+@layer base {
+  .header {
+    position: fixed;
+    z-index: var(--z-fixed);
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: var(--body-color);
+    transition:
+      box-shadow 0.4s,
+      background-color 0.4s;
+  }
+
+  .nav {
+    position: relative;
+    display: flex;
+    height: var(--header-height);
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .nav__logo {
+    display: flex;
+    align-items: center;
+    color: var(--title-color);
+    column-gap: 0.5rem;
+  }
+
+  .nav__buttons {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+  }
+
+  .nav__logo-circle,
+  .nav__toggle {
+    display: grid;
+    width: 32px;
+    height: 32px;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    place-items: center;
+  }
+
+  .nav__logo-circle {
+    border-radius: 50%;
+  }
+
+  .nav__toggle {
+    cursor: pointer;
+  }
+
+  /* Navigation for mobile devices */
+  @media screen and (max-width: 1150px) {
+    .nav__menu {
+      backdrop-filter: blur(8px);
+      background-color: hsla(0, 0%, 0%, 0.75);
+      padding-block: 1.8rem 5rem;
+      text-align: center;
+    }
+  }
+
+  .nav__title,
+  .nav__name,
+  .nav__close {
+    color: var(--white-color);
+  }
+
+  .nav__title {
+    display: block;
+    margin-bottom: 3.5rem;
+    font-size: var(--smaller-font-size);
+    font-weight: var(--font-semi-bold);
+    font-weight: var(--font-semi-bold);
+  }
+
+  .nav__name {
+    position: relative;
+    width: max-content;
+    margin: 0 auto 3rem;
+    font-size: var(--h2-font-size);
+  }
+
+  .nav__name::after,
+  .nav__name::before {
+    position: absolute;
+    top: 50%;
+    left: -4rem;
+    width: 40px;
+    height: 1px;
+    background-color: var(--text-color-light);
+    content: '';
+  }
+
+  .nav__name::before {
+    right: -4rem;
+    left: initial;
+  }
+
+  .nav__list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+  }
+
+  .nav__link {
+    position: relative;
+    color: var(--text-color);
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-semi-bold);
+    transition: color 0.3s;
+  }
+
+  .nav__link::after {
+    position: absolute;
+    bottom: -0.5rem;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: var(--white-color);
+    content: '';
+    transition: width 0.3s;
+  }
+
+  .nav__link:hover {
+    color: var(--white-color);
+  }
+
+  .nav__link:hover::after {
+    width: 25%;
+  }
+
+  .nav__close {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+    color: var(--text-color);
+    cursor: pointer;
+    font-size: 1.5rem;
+    transition: color 0.3s;
+  }
+
+  .nav__close:hover {
+    color: var(--white-color);
+  }
+
+  /* Add shadow header */
+  .shadow-header {
+    box-shadow: 0 1px 16px hsla(0, 0%, 0%, 0.12);
+  }
+
+  /* Active link */
+  .active-link {
+    color: var(--white-color);
+  }
+
+  .active-link::after {
+    width: 25%;
+  }
+}
+
 /*=============== BUTTON ===============*/
 @layer components {
   .button,
@@ -371,7 +535,8 @@
   }
 
   .button__ghost svg {
-    font-size: 1.25rem;
+    width: 1.25rem;
+    height: 1.25rem;
   }
 
   .button__ghost:hover {
@@ -420,5 +585,540 @@
   ::-webkit-scrollbar-corner,
   ::-webkit-resizer {
     display: none;
+  }
+}
+
+/*=============== SCROLL UP ===============*/
+@layer base {
+  .scrollup {
+    position: fixed;
+    z-index: var(--z-tooltip);
+    right: 1rem;
+    bottom: -50%;
+    display: inline-flex;
+    padding: 8px;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    font-size: 1.25rem;
+    transition:
+      bottom 0.4s,
+      transform 0.4s,
+      background-color 0.4s;
+  }
+
+  .scrollup svg {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
+
+  .scrollup:hover {
+    transform: translateY(-0.5rem);
+  }
+
+  /* Show Scroll Up */
+  .show-scroll {
+    bottom: 3rem;
+  }
+}
+
+/*=============== BREAKPOINTS ===============*/
+@layer base {
+  /* For small devices */
+  @media screen and (max-width: 344px) {
+    .container {
+      padding-inline: 1rem;
+    }
+
+    .home__image {
+      width: 180px;
+    }
+
+    .about__image {
+      width: 180px;
+    }
+
+    .about__shadow {
+      right: -2.5rem;
+      height: 330px;
+    }
+
+    .contact__data {
+      width: 100%;
+    }
+
+    .contact__data .section__title-2 {
+      transform: translateX(0);
+    }
+  }
+
+  /* For medium devices */
+  @media screen and (min-width: 576px) {
+    .home__container,
+    .home__container,
+    .projects__container {
+      justify-content: center;
+      grid-template-columns: 350px;
+    }
+
+    .contact__data {
+      width: 350px;
+      padding: 4rem 1.5rem;
+      margin-inline: auto;
+    }
+
+    .contact__container {
+      justify-content: center;
+      grid-template-columns: 500px;
+    }
+
+    .contact__group {
+      column-gap: 1rem;
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    .contact__social {
+      background-color: transparent;
+    }
+
+    .contact__social-arrow {
+      filter: invert(1);
+    }
+
+    .contact__social-description-1 {
+      color: var(--text-color);
+    }
+
+    .contact__social-description-2 {
+      color: var(--title-color);
+    }
+
+    .dark .contact__social-arrow {
+      filter: none;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    .services__container {
+      grid-template-columns: repeat(2, 250px);
+    }
+
+    .projects__container {
+      grid-template-columns: repeat(2, 350px);
+    }
+  }
+
+  /* For large devices */
+  @media screen and (min-width: 1150px) {
+    .section {
+      padding-block: 7rem 2rem;
+    }
+
+    .section__title-1::after,
+    .section__title-2::after {
+      width: 70px;
+      height: 48px;
+    }
+
+    .geometric-box {
+      transform: scale(1.2);
+    }
+
+    .nav {
+      height: calc(var(--header-height) + 2rem);
+      column-gap: 4rem;
+    }
+
+    .nav__close,
+    .nav__toggle,
+    .nav__title,
+    .nav__name {
+      display: none;
+    }
+
+    .nav__list {
+      flex-direction: row;
+      column-gap: 4rem;
+    }
+
+    .nav__menu {
+      margin-left: auto;
+    }
+
+    .nav__link {
+      color: var(--text-color);
+      font-size: var(--normal-font-size);
+    }
+
+    .nav__link:hover {
+      color: var(--title-color);
+    }
+
+    .nav__link::after {
+      background-color: var(--title-color);
+    }
+
+    .active-link {
+      color: var(--title-color);
+    }
+
+    .nav__link-button {
+      padding: 1.1rem 1.5rem;
+      background-color: var(--black-color);
+      color: var(--white-color);
+    }
+
+    .nav__link-button:hover {
+      color: var(--white-color);
+    }
+
+    .nav__link-button::after {
+      background-color: transparent;
+    }
+
+    .change-theme {
+      color: var(--text-color);
+    }
+
+    .change-theme:hover {
+      color: var(--title-color);
+    }
+
+    .home__container {
+      align-items: center;
+      gap: 2rem 4rem;
+      grid-template-columns: repeat(2, 460px);
+      padding-block: 5.5rem;
+    }
+
+    .home__perfil {
+      grid-column: 2/3;
+      grid-row: 1/3;
+    }
+
+    .home__image {
+      width: 350px;
+    }
+
+    .home__shadow {
+      right: -1.25rem;
+      bottom: -1.25rem;
+      border: 6px solid var(--black-color);
+    }
+
+    .home__name,
+    .home__description {
+      text-align: initial;
+    }
+
+    .home__name {
+      align-self: flex-end;
+    }
+
+    .home__info {
+      align-self: flex-start;
+      margin-top: 0;
+    }
+
+    .home__description {
+      position: relative;
+      padding-left: 3rem;
+      margin-bottom: 5.5rem;
+      font-size: var(--h2-font-size);
+    }
+
+    .home__description::after {
+      position: absolute;
+      top: 18px;
+      left: 0;
+      width: 32px;
+      height: 2px;
+      background-color: var(--title-color);
+      content: '';
+    }
+
+    .home__scroll {
+      display: flex;
+      align-items: center;
+      margin: 0;
+      column-gap: 0.75rem;
+    }
+
+    .home__scroll-text {
+      display: block;
+      color: var(--text-color);
+      font-size: var(--small-font-size);
+      font-weight: var(--font-medium);
+    }
+
+    .home__scroll-box {
+      width: 44px;
+      height: 44px;
+    }
+
+    .home__scroll-box svg {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
+
+    .home__perfil .geometric-box {
+      top: 15rem;
+    }
+
+    .home__arrow {
+      top: 4.5rem;
+      left: -8rem;
+      width: 80px;
+      rotate: 80deg;
+    }
+
+    .home__line {
+      bottom: 4rem;
+      left: -15rem;
+      width: 80px;
+      rotate: 30deg;
+    }
+
+    .home__social {
+      right: -6rem;
+      left: initial;
+    }
+
+    .home__social-link {
+      padding: 0.5rem;
+      font-size: 1.5rem;
+    }
+
+    .home__social-link svg {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+
+    .about__container {
+      align-items: center;
+      justify-content: center;
+      gap: 1rem 9rem;
+      grid-template-columns: 440px 525px;
+      padding-block: 1rem;
+    }
+
+    .about__perfil {
+      order: -1;
+      grid-row: 1/3;
+    }
+
+    .about__image {
+      width: 350px;
+    }
+
+    .about__img {
+      border: 8px solid var(--white-color);
+    }
+
+    .about__shadow {
+      top: -4rem;
+      right: -5.5rem;
+      width: 240px;
+      height: 615px;
+      border-bottom: 6px solid var(--first-color);
+    }
+
+    .about__perfil .geometric-box {
+      top: 4.5rem;
+      top: 10rem;
+      right: -4rem;
+    }
+
+    .about__line {
+      top: 10rem;
+      right: -2rem;
+      width: 80px;
+    }
+
+    .about__box {
+      right: -0.75rem;
+      width: 64px;
+      height: 64px;
+    }
+
+    .about__container .section__title-1 {
+      align-self: flex-end;
+      margin-inline: 0;
+    }
+
+    .about__info {
+      align-self: flex-start;
+      padding-left: 3rem;
+    }
+
+    .about__description {
+      margin-bottom: 2rem;
+      font-size: var(--h2-font-size);
+    }
+
+    .about__description::after {
+      top: 18px;
+      left: -3rem;
+      width: 32px;
+      height: 2px;
+    }
+
+    .about__list {
+      margin-bottom: 5rem;
+    }
+
+    .about__buttons {
+      justify-content: initial;
+    }
+
+    .button__ghost {
+      padding: 0.75rem;
+    }
+
+    .button__ghost svg {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+
+    .services__container {
+      column-gap: 5rem;
+      grid-template-columns: repeat(3, 282px);
+      padding-block: 3rem 5rem;
+    }
+
+    .services__content {
+      padding: 6.5rem 1.5rem 3.5rem;
+      border: 6px solid var(--black-color);
+    }
+
+    .services__icon svg {
+      width: 3rem;
+      height: 3rem;
+    }
+
+    .services__box {
+      width: 32px;
+      height: 32px;
+    }
+
+    .services__title {
+      margin-bottom: 1.5rem;
+    }
+
+    .services__card:hover .services__border {
+      transform: translate(1.25rem, 1.25rem);
+    }
+
+    .projects__container {
+      grid-template-columns: repeat(3, 352px);
+      padding-block: 3rem 1rem;
+    }
+
+    .projects__card {
+      padding: 1.25rem 1.25rem 2.5rem;
+    }
+
+    .projects__image {
+      margin-bottom: 1rem;
+    }
+
+    .projects__content {
+      margin-bottom: 2rem;
+    }
+
+    .projects__button {
+      right: 1.25rem;
+    }
+
+    .contact__container {
+      padding-bottom: 2rem;
+      grid-template-columns: 440px 670px;
+      grid-template-rows: initial;
+    }
+
+    .contact__mail {
+      padding: 7rem 5.5rem 6rem 7.5rem;
+      margin-top: 0;
+      grid-column: 2/3;
+      grid-row: 1/3;
+    }
+
+    .contact__title {
+      font-size: var(--h3-font-size);
+      text-align: initial;
+    }
+
+    .contact__box {
+      height: 60px;
+    }
+
+    .contact__form .contact__area {
+      height: 11rem;
+    }
+
+    .contact__button {
+      width: max-content;
+      margin-top: 1.25rem;
+    }
+
+    .contact__data {
+      width: 392px;
+      height: 385px;
+      padding: 4.5rem 3.5rem 3.5rem;
+      border-bottom: 6px solid var(--first-color);
+      margin: 7.5rem 0 0 8rem;
+    }
+
+    .contact__data .section__title-2 {
+      margin: 0 0 2rem;
+      transform: translateX(-6.5rem);
+    }
+
+    .contact__social {
+      margin-left: 8rem;
+      text-align: initial;
+    }
+
+    .contact__social-data {
+      flex-direction: row;
+      align-items: center;
+      column-gap: 1.25rem;
+    }
+
+    .contact__social-arrow {
+      width: 40px;
+    }
+
+    .contact__social-link {
+      padding: 0.5rem;
+      font-size: 1.5rem;
+    }
+
+    .contact__social-link svg {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+
+    .contact__message {
+      bottom: -2.5rem;
+    }
+
+    .dark .contact__data {
+      box-shadow: 4px 0 8px hsla(0, 0%, 4%, 0.3);
+    }
+
+    .footer__container {
+      justify-content: space-between;
+      grid-template-columns: repeat(2, max-content);
+      padding-block: 4rem;
+    }
+
+    .footer__links {
+      order: 1;
+      column-gap: 3rem;
+    }
+
+    .scrollup {
+      right: 3rem;
+    }
   }
 }
