feat: add scrollreavel animation

--- a/src/layouts/base-layout.astro
+++ b/src/layouts/base-layout.astro
@@ -20,5 +20,6 @@ import { Toaster } from '@/components/ui/toaster';
     <Footer />
     <ScrollUp />
     <Toaster client:load />
+    <script src="../scripts/main.js"></script>
   </body>
 </html>
